Able to get hover to stop on smaller desktop screens

--- a/src/components/appheaderhovernavigation.main.less
+++ b/src/components/appheaderhovernavigation.main.less
@@ -2,12 +2,14 @@
 
 .app-header-navigation-component {
     /** First dropdown **/
-    .btco-hover-menu ul li {
-      position: relative;
-    }
+    @media only screen and (min-width: @tabletWidth) {
+      .btco-hover-menu ul li {
+        position: relative;
+      }
 
-    .btco-hover-menu ul li:hover > ul {
-      display: block
+      .btco-hover-menu ul li:hover > ul {
+        display: block
+      }
     }
 
     .btco-hover-menu ul ul {
